Squashes a small bug in sell page's header and now done with front end

--- a/final-frontend/static/styles/sell.css
+++ b/final-frontend/static/styles/sell.css
@@ -1,28 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@300;400;500&family=Pangolin&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
 }
-body{
+html {
+    scroll-behavior: smooth;
+    scroll-padding: 10rem;
+}
+body {
     min-height: 300vh;
     position: absolute;
 }
 
-.header{
+.header {
     display: flex;
     flex-direction: column;
-
-
 }
-.logo{
+.logo {
     padding-left: 1vw;
     padding-top: 1vh;
-    background-blend-mode:multiply;
+    background-blend-mode: multiply;
 }
 
-.navbar{
+.navbar {
     display: flex;
     /* overflow: hidden; */
     background-color: #ffffff;
@@ -31,50 +33,61 @@ body{
     top: 0;
     box-shadow: 0 4px 6px rgba(196, 196, 196, 0.589);
     height: 10vh;
-    font-family: 'IBM Plex Serif', serif;
+    font-family: "IBM Plex Serif", serif;
     z-index: 100;
     width: 100vw;
 }
 
-.items ul{
+.items ul {
     display: flex;
     list-style: none;
-    gap: 5vw;
+    gap: 3vw;
     padding-top: 4vh;
     font-size: large;
     font-weight: 450;
     padding-left: 26vw;
-
 }
 
-.items a:visited{
+.items a:visited {
     color: inherit;
     text-decoration: none;
 }
-.items a:hover{
+.items a:hover {
     color: rgb(58, 238, 82);
     text-decoration: none;
 }
-a{
+a {
     text-decoration: none;
 }
+/* .intro{
+    background-image: url(India.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 1350px;
+    height: 703px;
+    color: antiquewhite;
+    font-family: 'Pangolin' sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid black;
+} */
 
-.link{
-    background:none;
+.link {
+    background: none;
     border: none;
     text-decoration: none;
-    font-family: 'IBM Plex Serif', serif;
+    font-family: "IBM Plex Serif", serif;
     cursor: pointer;
     padding: 0;
     font-size: inherit;
     font-weight: 500;
 }
 
-
-.link:hover{
+.link:hover {
     color: rgb(58, 238, 82);
 }
-
 
 .dropdown {
     position: relative;
@@ -88,7 +101,6 @@ a{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.541);
 }
 
-
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
@@ -96,18 +108,16 @@ a{
     display: block;
 }
 
-
 .dropdown-content a:hover {
-    background-color:rgb(151, 148, 145);
+    background-color: rgb(151, 148, 145);
     color: black;
 }
-
 
 .dropdown:hover .dropdown-content {
     display: block;
 }
 
-.join-btn{
+.join-btn {
     background-color: orangered;
     padding: 0.2rem 1rem 0.2rem 1rem;
     border: 0.15rem solid orangered;
@@ -115,15 +125,14 @@ a{
     font-weight: 400;
     font-size: 16px;
     text-decoration: none;
-    font-family: 'IBM Plex Serif', serif;
+    font-family: "IBM Plex Serif", serif;
     cursor: pointer;
     color: #ffffff;
 }
-.join-btn a:hover{
+.join-btn a:hover {
     color: rgb(0, 0, 0);
-
 }
-.join-btn:hover{
+.join-btn:hover {
     background-color: rgba(255, 68, 0, 0.671);
 }
 .img-container{
